--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
+        "symfony/doctrine-bridge": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/expression-language": "5.3.*",
         "symfony/flex": "^1.3.1",
