--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,11 @@ security:
                 login_path: login
                 check_path: login
                 enable_csrf: true
+            logout:
+                path: app_logout
+
+                # where to redirect after logout
+                target: app_index
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
