sécurisation de la route Program et Comment

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,6 +35,10 @@ security:
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
+    role_hierarchy:
+        ROLE_CONTRIBUTOR: ROLE_USER
+        ROLE_ADMIN: ROLE_CONTRIBUTOR
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/program/new, roles: ROLE_CONTRIBUTOR }
+        - { path: ^/program/[ a-z- ]+/edit, roles: ROLE_CONTRIBUTOR }
+
