--- a/composer.json
+++ b/composer.json
@@ -4,24 +4,25 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4",
-        "ext-ctype": "*",
-        "ext-iconv": "*",
-        "composer/package-versions-deprecated": "1.11.99.4",
-        "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^2.5",
-        "doctrine/doctrine-migrations-bundle": "^3.2",
-        "doctrine/orm": "^2.10",
-        "phpdocumentor/reflection-docblock": "^5.3",
-        "sensio/framework-extra-bundle": "^6.2",
-        "symfony/asset": "5.3.*",
-        "symfony/console": "5.3.*",
-        "symfony/doctrine-bridge": "5.3.*",
-        "symfony/dotenv": "5.3.*",
-        "symfony/expression-language": "5.3.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/form": "5.3.*",
-        "symfony/framework-bundle": "5.3.*",
+      "php": ">=7.4",
+      "ext-ctype": "*",
+      "ext-iconv": "*",
+      "composer/package-versions-deprecated": "1.11.99.4",
+      "doctrine/annotations": "^1.0",
+      "doctrine/doctrine-bundle": "^2.5",
+      "doctrine/doctrine-migrations-bundle": "^3.2",
+      "doctrine/orm": "^2.10",
+      "fakerphp/faker": "^1.17",
+      "phpdocumentor/reflection-docblock": "^5.3",
+      "sensio/framework-extra-bundle": "^6.2",
+      "symfony/asset": "5.3.*",
+      "symfony/console": "5.3.*",
+      "symfony/doctrine-bridge": "5.3.*",
+      "symfony/dotenv": "5.3.*",
+      "symfony/expression-language": "5.3.*",
+      "symfony/flex": "^1.3.1",
+      "symfony/form": "5.3.*",
+      "symfony/framework-bundle": "5.3.*",
         "symfony/http-client": "5.3.*",
         "symfony/intl": "5.3.*",
         "symfony/mailer": "5.3.*",
