add washlist method

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,4 +41,5 @@ security:
     access_control:
         - { path: ^/program/new, roles: ROLE_CONTRIBUTOR }
         - { path: ^/program/[ a-z- ]+/edit, roles: ROLE_CONTRIBUTOR }
+        - { path: ^/program/delete, roles: ROLE_ADMIN }
 
