--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
     "devDependencies": {
         "@hotwired/stimulus": "^3.0.0",
-        "@symfony/stimulus-bridge": "^3.0.0",
-        "@symfony/webpack-encore": "^1.7.0",
+        "@popperjs/core": "^2.11.0",
+        "@symfony/stimulus-bridge": "^2.0.0",
+        "@symfony/webpack-encore": "^1.0.0",
+        "bootstrap": "^5.1.3",
         "core-js": "^3.0.0",
+        "file-loader": "^6.0.0",
+        "jquery": "^3.6.0",
         "regenerator-runtime": "^0.13.2",
+        "sass": "^1.43.5",
+        "sass-loader": "^12.3.0",
+        "stimulus": "^2.0.0",
         "webpack-notifier": "^1.6.0"
-      "@popperjs/core": "^2.11.0",
-      "@symfony/stimulus-bridge": "^2.0.0",
-      "@symfony/webpack-encore": "^1.0.0",
-      "bootstrap": "^5.1.3",
-      "core-js": "^3.0.0",
-      "file-loader": "^6.0.0",
-      "jquery": "^3.6.0",
-      "regenerator-runtime": "^0.13.2",
-      "sass": "^1.43.5",
-      "sass-loader": "^12.3.0",
-      "stimulus": "^2.0.0",
-      "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -26,5 +21,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.8.1"
     }
 }
