--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,9 @@ security:
                 # "login" is the name of the route created previously
                 login_path: login
                 check_path: login
+                always_use_default_target_path: false
+                default_target_path: app_index
+                use_referer: false
                 enable_csrf: true
             logout:
                 path: app_logout
