--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,12 +19,11 @@ security:
             provider: app_user_provider
             form_login:
                 # "login" is the name of the route created previously
-                login_path: login
-                check_path: login
-                always_use_default_target_path: false
-                default_target_path: app_index
-                use_referer: false
-                enable_csrf: true
+              login_path: login
+              check_path: login
+              enable_csrf: true
+              always_use_default_target_path: true
+              default_target_path: app_index
             logout:
                 path: app_logout
 
