--- a/composer.json
+++ b/composer.json
@@ -23,29 +23,30 @@
       "symfony/flex": "^1.3.1",
       "symfony/form": "5.4.*",
       "symfony/framework-bundle": "5.4.*",
-        "symfony/http-client": "5.4.*",
-        "symfony/intl": "5.4.*",
-        "symfony/mailer": "5.4.*",
-        "symfony/mime": "5.4.*",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/notifier": "5.4.*",
-        "symfony/process": "5.4.*",
-        "symfony/property-access": "5.4.*",
-        "symfony/property-info": "5.4.*",
-        "symfony/proxy-manager-bridge": "5.4.*",
+      "symfony/http-client": "5.4.*",
+      "symfony/intl": "5.4.*",
+      "symfony/mailer": "5.4.*",
+      "symfony/mime": "5.4.*",
+      "symfony/monolog-bundle": "^3.1",
+      "symfony/notifier": "5.4.*",
+      "symfony/process": "5.4.*",
+      "symfony/property-access": "5.4.*",
+      "symfony/property-info": "5.4.*",
+      "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
         "symfony/security-bundle": "5.4.*",
-        "symfony/serializer": "5.4.*",
-        "symfony/string": "5.4.*",
-        "symfony/translation": "5.4.*",
-        "symfony/twig-bundle": "5.4.*",
-        "symfony/validator": "5.4.*",
-        "symfony/web-link": "5.4.*",
-        "symfony/webpack-encore-bundle": "^1.13",
-        "symfony/yaml": "5.4.*",
-        "symfonycasts/reset-password-bundle": "^1.11",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+      "symfony/serializer": "5.4.*",
+      "symfony/string": "5.4.*",
+      "symfony/translation": "5.4.*",
+      "symfony/twig-bundle": "5.4.*",
+      "symfony/validator": "5.4.*",
+      "symfony/web-link": "5.4.*",
+      "symfony/webpack-encore-bundle": "^1.13",
+      "symfony/yaml": "5.4.*",
+      "symfonycasts/reset-password-bundle": "^1.11",
+      "twig/extra-bundle": "^2.12|^3.0",
+      "twig/twig": "^2.12|^3.0",
+      "vich/uploader-bundle": "^1.19"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
